--- a/css/olivelearning.css
+++ b/css/olivelearning.css
@@ -1,32 +1,35 @@
 body{
-    background-color: #fff;
+  background-color: #fff;
 }
 .navbar-default{
     background-color: #263238;
     border-color: #263238;
-   }
-   .navbar-inverse{
-    background-color: #263238;
-    border-bottom: #fff 1px solid;
-    
-   }
-  .navbar-brand{
-    margin-bottom: 20px;
+}
 
-  }
-  .navbar-brand>h3{
-    color: #fff;
-  }
-  .navbar-responsive-collapse>ul{
-    margin-top: 20px;
-  }
-  .navbar-inverse .navbar-nav>li>a{
-    color: #fff;
-  }
-  .navbar-header>button{
-    margin-top: 30px;
-  }
+.navbar-inverse{
+  background-color: #263238;
+  border-bottom: #fff 1px solid;   
+}
 
+.navbar-brand{
+  margin-bottom: 20px;
+}
+
+.navbar-brand>h3{
+  color: #fff;
+}
+
+.navbar-responsive-collapse>ul{
+  margin-top: 20px;
+}
+
+.navbar-inverse .navbar-nav>li>a{
+  color: #fff;
+}
+
+.navbar-header>button{
+   margin-top: 30px;
+}
 
 .logo>h3{
   color: #fff;
@@ -51,6 +54,35 @@ body{
 
 }
 
+@media(min-width:768px) {
+  .carousel-control{
+    line-height: 400px;
+    }}
+
+@media(max-width:768px) and (min-width: 400px) {
+  .carousel-control{
+    line-height: 200px;
+    }
+  .carousel-control .material-icons{
+    background-color: #000;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 20px;
+    padding: 5px;
+}}
+
+@media(max-width: 400px) and (min-width: 190px) {
+  .carousel-control{
+    line-height: 120px;
+    }
+  .carousel-control .material-icons{
+    background-color: #000;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 20px;
+    padding: 5px;
+}}
+
 .video-description>h2{
   color: #fff;
   margin-bottom: 30px;
@@ -63,35 +95,6 @@ body{
   margin-left: -20px;
 }
 
-@media(min-width:768px) {
-    .carousel-control{
-        line-height: 400px;
-    }}
-
-    @media(max-width:768px) and (min-width: 400px) {
-      .carousel-control{
-        line-height: 200px;
-      }
-    .carousel-control .material-icons{
-  background-color: #000;
-  color: #fff;
-  border-radius: 30px;
-  font-size: 20px;
-  padding: 5px;
-}}
-
-@media(max-width: 400px) and (min-width: 190px) {
-      .carousel-control{
-        line-height: 120px;
-      }
-    .carousel-control .material-icons{
-  background-color: #000;
-  color: #fff;
-  border-radius: 30px;
-  font-size: 20px;
-  padding: 5px;
-}
-  }
 .buy{
   border-radius: 0px;
   border-top: #fff 1px solid;
@@ -102,7 +105,6 @@ body{
 
 .third_content{
   background-color: #000;
-  height: 120px;
   border-top: #383838 3px solid;
   border-bottom: #383838 3px solid;
   color: #fff;
@@ -113,7 +115,6 @@ body{
 .fourth_content{
   background-color: #fff;
   padding: 30px 0px;
-
 }
 
 blockquote{
@@ -128,19 +129,19 @@ blockquote{
 }
 
 table, td, th {    
-    border: 1px solid #ddd;
-    text-align: center;
-    color: #000;
-    background-color: #fff;
+  border: 1px solid #ddd;
+  text-align: center;
+  color: #000;
+  background-color: #fff;
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 th, td {
-    padding: 15px;
+  padding: 15px;
 }
 
 th{
@@ -150,9 +151,11 @@ th{
 td{
   font-size: 15px;
 }
+.col-lg-4 a:hover{
+  text-decoration: none;
+}
 .col-lg-4 a:hover th{
   background-color: #eae9e9;
-
 }
 
 .col-lg-4 a:hover td{
@@ -171,21 +174,21 @@ td{
   font-size: 16px;
 }
 
-
 .seventh-content{
   background-color: #eae9e9;
   padding: 20px 0px;
 }
-.material-icons{
+
+.icons{
+  margin-top: 20px;
+}
+
+.icons .material-icons{
   background-color: #000;
   color: #fff;
   border-radius: 30px;
   font-size: 50px;
   padding: 5px;
-}
-
-.icons{
-  margin-top: 20px;
 }
 
 .eighth-content{
@@ -202,3 +205,4 @@ footer{
   color:#8C8989;
   font-size: 11px;
 }
+
