--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,6 @@
 .info{
-  padding: 40px 0px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .information>p{
@@ -22,4 +23,14 @@
 
 .form-control{
 	border-radius: 0px;
+}
+
+@media(max-width:1100px){
+ .contact{
+  display: none;
+  visibility: hidden;
+}
+.topic{
+  text-align: center;
+}
 }
